--- a/easyrate/src/main/res/values/strings.xml
+++ b/easyrate/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="qa">QA</string>
     <string name="op">OP</string>
     <string name="pm">PM</string>
+    <string name="no_email_client">There are no email clients installed.</string>
 </resources>
